--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -1,22 +1,23 @@
-<!-- CHANGE :: Creat the code for chat box -->
+<!-- CHANGE :: Create the code for chat box -->
+<!-- Chat box -->
 <% if (locals.user){ %>
-	<div id="user-chat-box">
-		<ul id="chat-messages-list">
-			<li class="other-message">
-				<span>Other Message</span>
-			</li>
-			<li class="self-message">
-				<span>
+    <div id="user-chat-box">
+        <ul id="chat-messages-list">
+            <li class="other-message">
+                <span>Other Message</span>
+            </li>
+            <li class="self-message">
+                <span>
 					Self Message
 				</span>
-				
-			</li>
 
-		</ul>
-		<div id="chat-message-input-container">
-			<input id="chat-message-input" style="width:190px" placeholder="Type message here">
-			<button id="send-message" style="min-width: 20px;width: 100px; ">Send</button>
-		</div>
+            </li>
 
-	</div>
-<% } %>
+        </ul>
+        <div id="chat-message-input-container">
+            <input id="chat-message-input" style="width:190px" placeholder="Type message here">
+            <button id="send-message" style="min-width: 20px;width: 100px; ">Send</button>
+        </div>
+
+    </div>
+    <% } %>
